# partgen

./: CMakeLists.txt  README.md  iwyu.imp  partgen.manifest
addin/: CMakeLists.txt  fusion.cpp  fusion.h  main.cpp
cmake/: ClangFormat.cmake  FusionLibs.cmake
hack/: Dockerfile
include/partgen/: addin.h  api.h  command.h  part.h  version.h.in
src/: CMakeLists.txt  addin.cpp  generate_command.cpp  generate_command.h  part.cpp  part_list_generator.cpp  part_list_generator.h
test/: CMakeLists.txt  addin_test.cpp  demo_test.cpp  generate_command_test.cpp  part_list_generator_test.cpp  part_test.cpp
test/mocks/: api.h
